Revision history for Geo-Coder-GoolePlaces

0.06
	More helpful error message to help to debug REQUEST_DENIED

0.05	Tue Feb  8 16:04:17 EST 2022
	Fix tests
	Fix RT#141181

0.04	Tue Dec  1 08:50:35 EST 2020
	Added the key() method
	More tests

0.03	Tue 20 Dec 07:35:31 EST 2016
	More tests

0.02	Sun 18 Dec 18:02:03 EST 2016
	Added Travis support
	Fixed dependencies

0.01	Sun 18 Dec 12:47:53 EST 2016
	First draft