@@ -2,6 +2,7 @@ Revision history for Geo-Coder-GoolePlaces
 
 0.06
 	More helpful error message to help to debug REQUEST_DENIED
+	Use JSON::MaybeXS instead of JSON
 
 0.05	Tue Feb  8 16:04:17 EST 2022
 	Fix tests
